qemu (1.7.0+dfsg-2ubuntu6ppa1) trusty; urgency=medium

  * add arm64 patchset from upstream.  The three arm virt patches previously
    pushed are in that set, so drop them.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Fri, 10 Jan 2014 12:19:08 -0600

qemu (1.7.0+dfsg-2ubuntu5) trusty; urgency=medium

  * Drop d/p/fix-pci-add: upstream does not intend for pci_add to be
    supported any longer.
  * Add patchset from git://git.linaro.org/qemu/qemu-linaro.git#rebasing
  * Refresh debian/patches/hw_arm_add_virt_platform.patch against context
    churn caused by linaro patchset.
  * debian/rules: enable parallel builds.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Fri, 03 Jan 2014 10:53:17 -0600

qemu (1.7.0+dfsg-2ubuntu4) trusty; urgency=medium

  * d/control: enable usbredir (LP: 1126390)

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Thu, 02 Jan 2014 08:55:43 -0600

qemu (1.7.0+dfsg-2ubuntu3) trusty; urgency=medium

  * add missing arm virt patches from the mach-virt-v7 branch of
    git://git.linaro.org/people/cdall/qemu-arm.git

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Wed, 18 Dec 2013 12:25:59 -0600

qemu (1.7.0+dfsg-2ubuntu2) trusty; urgency=medium

  * debian/control: add arm64 to list of architectures.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Thu, 12 Dec 2013 10:22:47 -0600

qemu (1.7.0+dfsg-2ubuntu1) trusty; urgency=low

  * Merge 1.7.0+dfsg-2 from debian experimental.  Remaining changes:
    - debian/control
      * update maintainer
      * remove libiscsi, usb-redir, vde, vnc-jpeg, and libssh2-1-dev
        from build-deps
      * enable rbd
      * add qemu-system and qemu-common B/R to qemu-keymaps
      * add D:udev, R:qemu, R:qemu-common and B:qemu-common to
        qemu-system-common
      * qemu-system-arm, qemu-system-ppc, qemu-system-sparc:
        - add qemu-common, qemu-kvm, kvm to B/R
        - remove openbios-sparc from qemu-system-sparc D
        - drop openbios-ppc and openhackware Depends to Suggests (for now)
      * qemu-system-x86: