@@ -136,6 +136,7 @@ Package: qemu-system
 Architecture: amd64 arm arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel powerpc ppc64 s390x sparc sparc64
 Multi-Arch: foreign
 Depends: ${misc:Depends},
+ qemu-system-aarch64 [arm64],
  qemu-system-arm,
  qemu-system-mips,
  qemu-system-ppc, 
@@ -231,6 +232,37 @@ Description: QEMU full system emulation binaries (arm)
  .
  This package provides the full system emulation binaries to emulate
  the following arm hardware: ${sysarch:arm}.
+ .
+ In system emulation mode QEMU emulates a full system, including a processor
+ and various peripherals.  It enables easier testing and debugging of system
+ code.  It can also be used to provide virtual hosting of several virtual
+ machines on a single server.
+
+Package: qemu-system-aarch64
+Architecture: arm64
+Multi-Arch: foreign
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Upstream-Version}),
+Provides: ${sysprovides:arm64}
+Breaks:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
+  kvm (<< 1.3.0+dfsg-5)
+Replaces:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
+  kvm (<< 1.3.0+dfsg-5)
+Recommends: qemu-utils
+Suggests: samba, vde2
+Description: QEMU full system emulation binaries (aarch64)
+ QEMU is a fast processor emulator: currently the package supports
+ ARM emulation. By using dynamic translation it achieves
+ reasonable speed while being easy to port on new host CPUs.
+ .
+ This package provides the full system emulation binaries to emulate
+ the following aarch64 hardware: ${sysarch:aarch64}.
  .
  In system emulation mode QEMU emulates a full system, including a processor
  and various peripherals.  It enables easier testing and debugging of system
